--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/KEC_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lab1</title>
+    <title>Internet and Intranet Lab</title>
   </head>
   <body>
     <div id="root"></div>
